# NN0_1

./: CMakeLists.txt  FeedForwardNetwork.cpp  FeedForwardNetwork.h  README.md  helperFunctions.h
CppFiles/: ConvolutionalLayer.cpp  ConvolutionalLayer.h  ConvolutionalNetwork.cpp  ConvolutionalNetwork.h  DropoutLayer.cpp  DropoutLayer.h  EvolutionMaster.cpp  EvolutionMaster.h  FeedForwardNetwork.cpp  FeedForwardNetwork.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  MaxPoolLayer.cpp  MaxPoolLayer.h  NetworkLayer.cpp  NetworkLayer.h  Notes.txt  ReLULayer.cpp  ReLULayer.h  gene.cpp  gene.h  helperFunctions.cpp  helperFunctions.h  layerTemplate.cpp  layerTemplate.h  main.cpp
Doxygen/: config
Doxygen/html/: FeedForwardNetwork_8h_source.html  annotated.html  classFeedForwardNetwork-members.html  classFeedForwardNetwork.html  classes.html  dir_fa24881452fd3e336436fbd25fa16583.html  files.html  functions.html  functions_func.html  graph_legend.html  helperFunctions_8h_source.html  index.html
Doxygen/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
Doxygen/latex/: annotated.tex  classFeedForwardNetwork.tex  dir_fa24881452fd3e336436fbd25fa16583.tex  refman.tex
